--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ h1 {
   font-size: 3rem;
 }
 
-div {
-  /* border: 1px solid white; */
-}
+/* div {
+  border: 1px solid white;
+} */
 
 .font-size-1 {
   font-size: 1.25rem;
