--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   --white: whitesmoke; /* text color */
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,9 +25,13 @@ h1 {
   font-size: 3rem;
 }
 
+/* FOR DEBUGGING START */
+
 /* div {
   border: 1px solid white;
 } */
+
+/* FOR DEBUGGING END*/
 
 .font-size-1 {
   font-size: 1.25rem;
@@ -401,6 +409,10 @@ footer {
     padding: 0 1.2rem;
   }
 
+  /* blur background */
+  #home {
+  }
+
   .projects-item,
   .testimonials-item {
     width: 100%;
@@ -456,11 +468,12 @@ footer {
     top: 60px;
     right: 0;
     background-color: var(--nav-bg);
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
+    padding-top: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
@@ -479,7 +492,7 @@ footer {
   .nav-menu li {
     padding: 20px;
     font-size: 1.5rem;
-    text-align: center;
+    text-align: right;
   }
 
   .nav-menu a {
