--- a/style.css
+++ b/style.css
@@ -410,8 +410,16 @@ footer {
   }
 
   /* blur background */
-  #home {
+  .blur-layer {
+    transition: filter() 0.5s ease; /* Smooth transition */
   }
+
+  .blur-layer.active {
+    filter: blur(1px);
+    --webkit-filter: blur(1px); /* For Safari */
+    -moz-filter: blur(1px); /* For Firefox */
+  }
+  /* blur background */
 
   .projects-item,
   .testimonials-item {
