--- a/style.css
+++ b/style.css
@@ -386,6 +386,8 @@ h3 {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
   transition: background-color 0.3s ease;
 }
 .submitForm:hover {
