--- a/style.css
+++ b/style.css
@@ -489,13 +489,15 @@ footer {
     right: 0;
     background-color: var(--nav-bg);
     /* width: 100%; */
-    height: 100vh;
+    height: 40vh;
     padding-top: 2rem;
     z-index: 99;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    border-radius: 30px;
+    border-radius: 0 0 0 30%;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
   }
